--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "stripe/stripe-php": "^16.4"
+        "stripe/stripe-php": "^16.4",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
